fixed copyright too wide issue

--- a/Medhacks2018/sass/main.scss
+++ b/Medhacks2018/sass/main.scss
@@ -621,9 +621,9 @@ footer {
 
     .copyright {
         position: relative;
-        top: 17.5rem;
         width: 105vw;
-        right: 8%;
+        left: 90%;
+        float: right;
     }
 
     .column1 {
